hw4