@@ -1,6 +1,7 @@
 package hw4.puzzle;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -8,6 +9,7 @@ import java.util.Objects;
  * Created by hug. See https://goo.gl/MVL8up for details on these puzzles.
  */
 public class CommonBugDetector {
+
     public static class CommonBugPuzzleState implements WorldState {
         private char name;
         public CommonBugPuzzleState() {
@@ -32,13 +34,13 @@ public class CommonBugDetector {
         @Override
         public Iterable<WorldState> neighbors() {
             switch (name) {
-                case('s'): return createWorldStateList(List.of('a', 'x'));
-                case('a'): return createWorldStateList(List.of('b'));
-                case('b'): return createWorldStateList(List.of('c'));
-                case('c'): return createWorldStateList(List.of('d'));
-                case('d'): return createWorldStateList(List.of('e'));
-                case('e'): return createWorldStateList(List.of('g'));
-                case('x'): return createWorldStateList(List.of('c'));
+                case('s'): return createWorldStateList(Arrays.asList('a', 'x'));
+                case('a'): return createWorldStateList(Arrays.asList('b'));
+                case('b'): return createWorldStateList(Arrays.asList('c'));
+                case('c'): return createWorldStateList(Arrays.asList('d'));
+                case('d'): return createWorldStateList(Arrays.asList('e'));
+                case('e'): return createWorldStateList(Arrays.asList('g'));
+                case('x'): return createWorldStateList(Arrays.asList('c'));
                 default: return null;
             }
         }
@@ -84,4 +86,6 @@ public class CommonBugDetector {
         // if you print out the total number of items enqueued by s3
         // it should be approximately 25, not approximately 50.
     }
+
+
 }
